@@ -16,7 +16,8 @@
 
 
 
-xflr5 v6.11 July 19th, 2015
+xflr5 v6.11 August 8th, 2015
+	- added an option to customize the target lift distribution curve in the wing's operating point view
 	- added inertia data as parameters in stability analysis
 	- added more display options for curve points
 	- replaced the deprecated QGLWidget by the new QOpenGLWidget recommended in Qt5.4
